--- a/Servlets/WebContent/start.html
+++ b/Servlets/WebContent/start.html
@@ -2,9 +2,9 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>WelcomeFileList(web.xml)</title>
 </head>
 <body>
-<h1>TEST2</h1>
+<h1>TEST3</h1>
 </body>
 </html>
